# trivial-colours-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  aliases.js  appveyor.yml  gh_rsa.enc  search-index.js  trivial-colours-rs.sublime-project
examples/: simple.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
src/: dummy.rs  lib.rs  not_windows.rs  windows.rs  windows_winapi.rs
src/trivial_colours/: lib.rs.html  not_windows.rs.html
src/trivial_colours/src/: lib.rs.html  not_windows.rs.html
trivial_colours/: BgColour.t.html  all.html  enum.BgColour.html  enum.Colour.html  index.html  sidebar-items.js  struct.Reset.html
