[package]
name = "trivial_colours"
description = "Very simple and naive colour changing for your terminal, but that's exactly what you need sometimes"
documentation = "https://rawcdn.githack.com/nabijaczleweli/trivial-colours-rs/doc/trivial_colours/index.html"
repository = "https://github.com/nabijaczleweli/trivial-colours-rs"
readme = "README.md"
keywords = ["color", "terminal", "simple"]
categories = ["command-line-interface"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.3.0"
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
exclude = ["*.enc"]


[target.'cfg(target_os = "windows")'.dependencies]
kernel32-sys = { version = "0.2", optional = true }
lazy_static = { version = "0.2", optional = true }
winapi = { version = "0.2", optional = true }

[features]
default = ["use_winapi"]
use_winapi = ["kernel32-sys","lazy_static", "winapi"]
